style bug on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -55,7 +55,7 @@ a:hover {
     width: 100%;
     margin-top: 100px;
     min-height: 40px;
-    padding: 10px;
+    padding: 10px 0px;
     color: white;
     justify-content: center;
     background-color: var(--tau-black);
